<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GatoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_00"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_01"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_02"
            android:layout_width="100dp"
            android:layout_height="50dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_10"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_11"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_12"
            android:layout_width="100dp"
            android:layout_height="50dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_20"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_21"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_22"
            android:layout_width="100dp"
            android:layout_height="50dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/button_Reiniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:text="@string/reiniciar" />

    <TextView
        android:id="@+id/textView_Tiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:text="@string/tiempo" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textView_PuntuacionTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:text="@string/puntuacion_total" />

    <TextView
        android:id="@+id/textView_PuntuacionX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:text="@string/puntuacion_x" />

    <TextView
        android:id="@+id/textView4_PuntuacionO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:text="@string/puntuacion_o" />

    <TextView
        android:id="@+id/textView_Empates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:text="@string/empates" />

</LinearLayout>